# esp32c3-2023-october-superlab

./: README.md
esp32c3/: Cargo.toml
esp32c3/.cargo/: config.toml
esp32c3/examples/: blinky.rs  button.rs  monotonic.rs  panic.rs  rtc_time.rs  smartled.rs  uart_echo.rs  uart_echo_split.rs
esp32c3/src/: main.rs
ex3/: Cargo.toml  README.md
ex3/src/: main.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: date_time.rs  lib.rs  shift_register.rs
