[package]
name = "esp32c3_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

critical-section = "1.1.2"
cfg-if = "1.0.0"

# target dependency
esp32c3-hal = { git = "https://github.com/perlindgren/esp-hal", branch = 'uart', features = [
    "direct-boot",
    "interrupt-preemption",
    "direct-vectoring",
] }
esp32c3 = { version = "0.17.0", features = ["critical-section"] }

# tracing and panic handling
rtt-target = { version = "0.4.0" }
panic-rtt-target = "0.1.2"

# rtic framework
rtic = { git = 'https://github.com/rtic-rs/rtic', features = [
    "riscv-esp32c3-backend",
] }

rtic-sync = { git = 'https://github.com/rtic-rs/rtic' }

# external libraries used
ssmarshal = { version = "1.0.0", default-features = false }
corncobs = "0.1.3"
crc = "3.0.1"

# application dependency
shared = { path = "../shared" }
rtic-monotonics = { git = "https://github.com/onsdagens/rtic", branch = "monotonic", features = [
    "esp32c3-systimer",
] }

[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = 3

# use critical section instead of atomics
[patch.crates-io]
rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }
panic-rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }
