[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serial2 = "0.2.2"
shared = { path = "../shared" }
ssmarshal = { version = "1.0.0" }
corncobs = "0.1.3"
crc = "3.0.1"
