[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serial2 = "0.2.2"
shared = { path = "../shared" }
ssmarshal = { version = "1.0.0" }
corncobs = "0.1.3"
crc = "3.0.1"
rumqttc = "0.23.0"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
termion = "2.0.3"
tui = { version = "0.19", default-features = false, features = ['termion'] }
