[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
lto = true

[dependencies]
serde = { version = "1.0.188", default-features = false }
serde_derive = "1.0.188"
ssmarshal = { version = "1.0.0", default-features = false }
corncobs = "0.1.3"
crc = "3.0.1"
